# switch-ftp-client

./: .gitignore  CMakeLists.txt  README.md
lang/: Arabic.ini  English.ini  Traditional Chinese.ini  Turkish.ini
src/: CurlHandle.cpp  FTPClient.cpp  FTPClient.h  actions.cpp  actions.h  config.cpp  config.h  fs.cpp  fs.h  ftpclient.cpp  ftpclient.h  gui.cpp  gui.h  ime_dialog.cpp  ime_dialog.h  imgui_impl_deko3d.cpp  imgui_impl_deko3d.h  imgui_impl_switch.cpp  lang.cpp  lang.h  main.cpp  textures.cpp  textures.h  windows.cpp  windows.h
